--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,14 +51,22 @@
         <a href="/about.html" title="About the author and site">About</a> &bull;
         <a href="/archive.html" title="Archived writing">Archive</a> &bull;
         <a href="/links.html" title="Links">Links</a>
-        <form action="http://www.google.com/cse" id="cse-search-box">
-          <div>
-            <input type="hidden" name="cx" value="000652178004161548235:gnplrkdmhbu" />
-            <input type="hidden" name="ie" value="UTF-8" />
-            <input type="text" name="q" size="40" />
-            <input type="submit" name="sa" value="Search" />
-          </div>
-        </form>
+        
+        <div id="cse" style="width: 100%;">Loading</div>
+        <script src="http://www.google.com/jsapi" type="text/javascript"></script>
+        <script type="text/javascript">
+          google.load('search', '1', {language : 'en'});
+          google.setOnLoadCallback(function() {
+            var customSearchControl = new google.search.CustomSearchControl('003730570411629047560:hoyvw7xkswg');
+            customSearchControl.setResultSetSize(google.search.Search.FILTERED_CSE_RESULTSET);
+            customSearchControl.draw('cse');
+          }, true);
+        </script>
+        <link rel="stylesheet" href="http://www.google.com/cse/style/look/minimalist.css" type="text/css" />
+        <style>
+          .gsc-control-cse { padding-left: 0px; }
+          .gsc-control-cse a:link, .gsc-control-cse a:hover { color: #336699; }
+        </style>
       </footer>
     </div>
     {% include analytics.html %}
