Make disqus notices lighter

--- a/css/screen.css
+++ b/css/screen.css
@@ -647,6 +647,11 @@ em.code {
   margin-bottom: 4px;
 }
 
+.dsq-notice {
+  background: rgba(255,255,0,.05);
+  border: 1px solid rgba(210,210,0,.3);
+}
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
